[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/levelshot/level_settings_control.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_bottom = 2

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=2]

[node name="LevelSettings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="LevelSettingsVBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 394.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="LevelSettingsHeaderLabel" type="Label" parent="LevelSettingsVBoxContainer"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 1 )
text = "Level Settings"

[node name="SizeHBoxContainer" type="HBoxContainer" parent="LevelSettingsVBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 116.0
custom_constants/separation = 20

[node name="SizeLabel" type="Label" parent="LevelSettingsVBoxContainer/SizeHBoxContainer"]
margin_top = 33.0
margin_right = 70.0
margin_bottom = 47.0
hint_tooltip = "How the levelshot image size is calculated"
mouse_filter = 1
text = "Image Size"

[node name="SizeOptionsVBoxContainer" type="VBoxContainer" parent="LevelSettingsVBoxContainer/SizeHBoxContainer"]
margin_left = 90.0
margin_right = 455.0
margin_bottom = 80.0

[node name="ScaleHBoxContainer" type="HBoxContainer" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer"]
margin_right = 365.0
margin_bottom = 24.0

[node name="SizeOptionScaleCheckBox" type="CheckBox" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/ScaleHBoxContainer"]
unique_name_in_owner = true
margin_right = 61.0
margin_bottom = 24.0
hint_tooltip = "The image size is calculated by scaling the level size"
pressed = true
group = SubResource( 3 )
text = "Scale"

[node name="OneToLabel" type="Label" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/ScaleHBoxContainer"]
margin_left = 65.0
margin_top = 5.0
margin_right = 77.0
margin_bottom = 19.0
text = "1:"

[node name="ScaleSpinBox" type="SpinBox" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/ScaleHBoxContainer"]
unique_name_in_owner = true
margin_left = 81.0
margin_right = 155.0
margin_bottom = 24.0
min_value = 1.0
max_value = 1000.0
value = 10.0

[node name="ScaleHelperLabel" type="Label" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/ScaleHBoxContainer"]
unique_name_in_owner = true
margin_left = 159.0
margin_top = 5.0
margin_right = 365.0
margin_bottom = 19.0
text = "(image will be 10% of level size)"

[node name="MaxImageSizeHBoxContainer" type="HBoxContainer" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer"]
margin_top = 28.0
margin_right = 365.0
margin_bottom = 52.0

[node name="SizeOptionMaxCheckBox" type="CheckBox" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/MaxImageSizeHBoxContainer"]
unique_name_in_owner = true
margin_right = 84.0
margin_bottom = 24.0
hint_tooltip = "The image size is calculated to fit within these dimensions,
keeping the level size aspect ratio"
group = SubResource( 3 )
text = "Max Size"

[node name="SizeXSpinBox" type="SpinBox" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/MaxImageSizeHBoxContainer"]
unique_name_in_owner = true
margin_left = 88.0
margin_right = 162.0
margin_bottom = 24.0
hint_tooltip = "this is a tooltip"
max_value = 10000.0
value = 1920.0

[node name="ByLabel" type="Label" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/MaxImageSizeHBoxContainer"]
margin_left = 166.0
margin_top = 5.0
margin_right = 204.0
margin_bottom = 19.0
text = "px by "

[node name="SizeYSpinBox" type="SpinBox" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/MaxImageSizeHBoxContainer"]
unique_name_in_owner = true
margin_left = 208.0
margin_right = 282.0
margin_bottom = 24.0
max_value = 10000.0
value = 1080.0

[node name="SizeYPxLabel" type="Label" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/MaxImageSizeHBoxContainer"]
margin_left = 286.0
margin_top = 5.0
margin_right = 301.0
margin_bottom = 19.0
text = "px"

[node name="ScaleWithMaxHBoxContainer" type="HBoxContainer" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer"]
margin_top = 56.0
margin_right = 365.0
margin_bottom = 80.0

[node name="ScaleWithMaxMaxCheckBox" type="CheckBox" parent="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/ScaleWithMaxHBoxContainer"]
unique_name_in_owner = true
margin_right = 226.0
margin_bottom = 24.0
hint_tooltip = "Scale Image Size calculation is done first.
If that is bigger than Max size,
then the Max Size calculation is used.
"
group = SubResource( 3 )
text = "Use Scale but limit to Max Size"

[node name="LevelExtentsHBoxContainer" type="HBoxContainer" parent="LevelSettingsVBoxContainer"]
margin_top = 136.0
margin_right = 1024.0
margin_bottom = 188.0
custom_constants/separation = 10

[node name="LevelExtentsLabel" type="Label" parent="LevelSettingsVBoxContainer/LevelExtentsHBoxContainer"]
margin_right = 100.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 0 )
hint_tooltip = "How the level boundary is determined"
mouse_filter = 1
size_flags_vertical = 1
text = "Level Boundary"

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSettingsVBoxContainer/LevelExtentsHBoxContainer"]
margin_left = 110.0
margin_right = 321.0
margin_bottom = 52.0

[node name="LevelExtentsCalculateCheckBox" type="CheckBox" parent="LevelSettingsVBoxContainer/LevelExtentsHBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 211.0
margin_bottom = 24.0
hint_tooltip = "Traverse level scene and determine the global bounding box for all visible (and non-excluded) nodes.  
These bounding boxes are merged into one bounding box for the entire level.  
This calculation may be wrong or include things you don't want.  
Use an excluded node group or LevelshotReferenceRect if this happens."
pressed = true
group = SubResource( 2 )
text = "Calculate"

[node name="LevelExtentsLevelshotRefRectCheckBox" type="CheckBox" parent="LevelSettingsVBoxContainer/LevelExtentsHBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 211.0
margin_bottom = 52.0
hint_tooltip = "The bounding box for the level is set with a LevelshotReferenceRect node.
This option allows full control and can be faster.
You can included multiple LevelshotReferenceRect nodes in a game level scene.
A separate levelshot will be created for each LevelshotReferenceRect node."
group = SubResource( 2 )
text = "Use LevelshotReferenceRect"

[node name="ExcludedNodeGroupsVBoxContainer" type="VBoxContainer" parent="LevelSettingsVBoxContainer"]
margin_top = 208.0
margin_right = 1024.0
margin_bottom = 266.0

[node name="ExcludedNodeGroupsLabel" type="Label" parent="LevelSettingsVBoxContainer/ExcludedNodeGroupsVBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
hint_tooltip = "Nodes with one of these node groups will be excluded from the levelshot.
(They will be made invisible.)"
mouse_filter = 1
text = "Excluded Node Groups (comma separated)"

[node name="ExcludedNodeGroupsTextEdit" type="TextEdit" parent="LevelSettingsVBoxContainer/ExcludedNodeGroupsVBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 40 )
text = "levelshot_exclude
"

[node name="IncludeCanvasLayersCheckBox" type="CheckBox" parent="LevelSettingsVBoxContainer"]
unique_name_in_owner = true
margin_top = 286.0
margin_right = 1024.0
margin_bottom = 310.0
hint_tooltip = "HUDs and other overlays are usually not wanted.
If this is untrue for the level, check this box."
text = "Include Canvas Layers"

[node name="DisableLevelshotCheckBox" type="CheckBox" parent="LevelSettingsVBoxContainer"]
unique_name_in_owner = true
margin_top = 330.0
margin_right = 1024.0
margin_bottom = 354.0
hint_tooltip = "Level image won't be created, but keep the Levelshot settings for it just in case.
(You can also remove the level from Levelshot.)"
text = "Disable Levelshot for this level"

[node name="CommandsHBoxContainer" type="HBoxContainer" parent="LevelSettingsVBoxContainer"]
margin_top = 374.0
margin_right = 1024.0
margin_bottom = 394.0
alignment = 2

[node name="RemoveLevelBtn" type="Button" parent="LevelSettingsVBoxContainer/CommandsHBoxContainer"]
margin_left = 922.0
margin_right = 1024.0
margin_bottom = 20.0
hint_tooltip = "Removes the level from Levelshot.
Does NOT delete the scene."
text = "Remove Level"

[node name="NoLevelSelectedCenterContainer" type="CenterContainer" parent="."]
margin_top = 398.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="NoLevelSelectedCenterContainer"]
margin_left = 411.0
margin_top = 94.0
margin_right = 612.0
margin_bottom = 108.0
text = "Please add/select a level scene"

[connection signal="value_changed" from="LevelSettingsVBoxContainer/SizeHBoxContainer/SizeOptionsVBoxContainer/ScaleHBoxContainer/ScaleSpinBox" to="." method="_on_ScaleSpinBox_value_changed"]
[connection signal="toggled" from="LevelSettingsVBoxContainer/DisableLevelshotCheckBox" to="." method="_on_DisableLevelshotCheckBox_toggled"]
[connection signal="pressed" from="LevelSettingsVBoxContainer/CommandsHBoxContainer/RemoveLevelBtn" to="." method="_on_RemoveLevelBtn_pressed"]
